Summary of Changes to DuroDBMS

DuroDBMS 1.4

- lower() and upper() convert multibyte characters.

- Fixed bug that caused memory leaks when dropping local variables.

- Fixed bug that made the interpreter crash when trying to access dropped local variables.

- Fixed creation of local tables with multiple keys when an environment is open.

- Added handling of types with possible represenations to the REST server and Java client.

- Java REST client: Fixed handling of arrays when converting from JSON.

- Added option to build DuroDBMS without Berkeley DB.

DuroDBMS 1.3

- Added functions lower(), upper()

- Added backtick quoting of identifiers

- Added PostgreSQL support

- Added REST server srv/durod and Java client support for accessing a database using HTTP/REST.

- RDB_create_recmap() etc. return errors using an RDB_exec_context.

DuroDBMS 1.2

- Added a limited form of subtyping. Only dummy types can be supertypes.

- Added operator versions.

- Added checking for integer overflow. An integer overflow results in a
  type_constraint_violation_error being raised.

- Updating arguments of read-only operators and read-only arguments of
  update operators results in a runtime error.

- Renamed Duro_print_error() as Duro_println_error(). The output of
  Duro_print_error_f() is no longer followed by a newline.

- Removed RDB_obj_set_const() and RDB_obj_is_const().

- Added read-only operators % (modulus), abs(), pow(), exp(), ln(), and log().

- Added operators os.chdir() and io.popen().

- Moved exit() operators to package 'os'. 

- Possrep components are enclosed in parens instead of braces.
  (The old syntax is still supported)

- Added script for database environment upgrade.

DuroDBMS 1.1

- Accessing properties is now possible using value.property in addition
  to the_property(value).

- Added read-only operators serialize(), add_seconds(), weekday(), local_to_utc(),
  and format() to libduro.

- Added RDB_obj_to_bin() and RDB_bin_to_obj() to rel/rdb.h.